--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,3 +3,4 @@ cmake_minimum_required (VERSION 2.8)
 project (cxx_examples CXX)
 
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/FunctionPointer")
+add_subdirectory ("${PROJECT_SOURCE_DIR}/src/MetaProgramming")
