--- a/src/MetaProgramming/CMakeLists.txt
+++ b/src/MetaProgramming/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required (VERSION 2.8)
 
-set (sources function_pointer_exam01.cpp)
+set (CMAKE_CXX_FLAGS "-Wno-c++11-extensions")
+
+set (sources metaprogramming_exam01.cpp)
 
 foreach (source ${sources})
     get_filename_component (exam ${source} NAME_WE)
