Add Hash examples
I also put the output above the main function of each example so that
other people can view them online.

A BASH script ‘run_exams.sh’ is also added to build and run the examples
together.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,3 +4,4 @@ project (cxx_examples CXX)
 
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/FunctionPointer")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/MetaProgramming")
+add_subdirectory ("${PROJECT_SOURCE_DIR}/src/Hash")
