Add UseLibraries examples (now only for MLPACK)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory ("${PROJECT_SOURCE_DIR}/src/FunctionPointer")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/MetaProgramming")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/Hash")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/Container")
+add_subdirectory ("${PROJECT_SOURCE_DIR}/src/UseLibraries/MLPACK")
