Add example using NLopt library to do minimization
In nlopt_exam01.cpp, three cases are tested, but the case 1 is suspected
to be wrong.

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,6 @@
 # Compiled executables
 *.exe
 
-# CMake files
-CMakeCache.txt
-CMakeFiles
-Makefile
-cmake_install.cmake
+# Build files
+build
+build.*
