--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,3 +8,4 @@ add_subdirectory ("${PROJECT_SOURCE_DIR}/src/MetaProgramming")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/Hash")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/Container")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/UseLibraries/MLPACK")
+add_subdirectory ("${PROJECT_SOURCE_DIR}/src/UseLibraries/NLopt")
