--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,6 @@ add_subdirectory ("${PROJECT_SOURCE_DIR}/src/Pointer/FunctionPointer")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/MetaProgramming")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/Hash")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/Container")
+add_subdirectory ("${PROJECT_SOURCE_DIR}/src/RandomNumber")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/UseLibraries/MLPACK")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/UseLibraries/NLopt")
