--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,7 @@ add_subdirectory ("${PROJECT_SOURCE_DIR}/src/MetaProgramming")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/Hash")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/Container")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/RandomNumber")
+add_subdirectory ("${PROJECT_SOURCE_DIR}/src/Polymorphism")
+add_subdirectory ("${PROJECT_SOURCE_DIR}/src/OpenMP")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/UseLibraries/MLPACK")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/UseLibraries/NLopt")
