Add C++11 auto example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,4 +11,5 @@ add_subdirectory ("${PROJECT_SOURCE_DIR}/src/RandomNumber")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/Polymorphism")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/OpenMP")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/UseLibraries/MLPACK")
-add_subdirectory ("${PROJECT_SOURCE_DIR}/src/UseLibraries/NLopt")
+# add_subdirectory ("${PROJECT_SOURCE_DIR}/src/UseLibraries/NLopt")
+add_subdirectory ("${PROJECT_SOURCE_DIR}/src/C++11")
