Add another meta-programming example

--- a/src/MetaProgramming/CMakeLists.txt
+++ b/src/MetaProgramming/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required (VERSION 2.8)
 
 set (CMAKE_CXX_FLAGS "-Wno-c++11-extensions")
 
-set (sources metaprogramming_exam01.cpp)
+set (sources
+    metaprogramming_exam01.cpp
+    metaprogramming_exam02.cpp    
+)
 
 foreach (source ${sources})
     get_filename_component (exam ${source} NAME_WE)
