Add WorkWithFortran example

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,3 +13,4 @@ add_subdirectory ("${PROJECT_SOURCE_DIR}/src/OpenMP")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/UseLibraries/MLPACK")
 # add_subdirectory ("${PROJECT_SOURCE_DIR}/src/UseLibraries/NLopt")
 add_subdirectory ("${PROJECT_SOURCE_DIR}/src/C++11")
+add_subdirectory ("${PROJECT_SOURCE_DIR}/src/WorkWithFortran")
