Add a Boost.variant example

--- a/src/Polymorphism/CMakeLists.txt
+++ b/src/Polymorphism/CMakeLists.txt
@@ -2,7 +2,12 @@ cmake_minimum_required (VERSION 2.8)
 
 set (CMAKE_CXX_FLAGS "-std=c++11")
 
-set (sources polymorphism_exam01.cpp)
+find_package (Boost 1.55.0 REQUIRED)
+
+set (sources
+    polymorphism_exam01.cpp
+    polymorphism_exam02.cpp
+)
 
 foreach (source ${sources})
     get_filename_component (exam ${source} NAME_WE)
